Changement de l'image de fond (TP 2 - Intégration)

--- a/index.html
+++ b/index.html
@@ -11,37 +11,26 @@
 
 <body>
   <header class="header container">
-
     <div class="header__end">
-
       <button class="header__menu-btn menu-btn" aria-label="menu" aria-expanded="false" aria-controls="mainNav">
-        🍔
+        ▶
       </button>
 
       <nav class="header__menu menu" id="mainNav" aria-hidden="true">
         <ul class="menu__list list-unstyled">
-          <li class="menu__item">
-            <a class="menu__link" href="#">Item de menu un</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#">Item de menu deux</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#">Item de menu trois</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#">Item de menu quatre</a>
-          </li>
+          <li class="menu__item"><a class="menu__link" href="#">Item de menu un</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Item de menu deux</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Item de menu trois</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Item de menu quatre</a></li>
         </ul>
       </nav>
     </div>
   </header>
+
   <main>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et est adipisci repellat aliquid, sit commodi facere
       similique quidem iste sunt accusamus accusantium ab unde dolore quaerat voluptatibus error voluptatem molestiae?
     </p>
   </main>
-
 </body>
-
 </html>
