Ajout ds élements cliquables, et photos de chats/chiens

--- a/cats/chat-1.html
+++ b/cats/chat-1.html
@@ -4,8 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chat 1</title>
+  <link rel="stylesheet" href="../src/css/styles.css">
 </head>
 <body>
-  <h1>Chat 1</h1>
+  <nav>
+    <a href="index.html">Retour aux chats</a> | <a href="../index.html">Accueil</a>
+  </nav>
+  <main>
+    <h1> Chat Sphynx sans poil</h1>
+    <p>Un chat très mignon mais pas très poilu....</p>
+    <img class="media media--fullwidth" src="../public/img/cats/Cat_Sphynx._Kittens._img_11.jpg" alt="Chatons Sphynx">
+  </main>
 </body>
 </html>
