--- a/dogs/chien-2.html
+++ b/dogs/chien-2.html
@@ -4,8 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chien 2</title>
+  <link rel="stylesheet" href="../src/css/styles.css">
 </head>
 <body>
-  <h1>Chien 2</h1>
+  <nav>
+    <a href="index.html">Retour aux chiens</a> | <a href="../index.html">Accueil</a>
+  </nav>
+  <main>
+    <h1>Chien 2</h1>
+    <img class="media media--fullwidth" src="../public/img/dogs/German_shepherd_wanting_to_play.JPG" alt="Berger allemand qui veut jouer">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+  </main>
 </body>
 </html>
