--- a/cats/index.html
+++ b/cats/index.html
@@ -6,7 +6,7 @@
   <title>Cats</title>
 </head>
 <body>
-  <h1>Cats</h1>
+  <h1>Deux photos différentes de chats</h1>
   <ul>
     <li><a href="chat-1.html">Chat 1</a></li>
     <li><a href="chat-2.html">Chat 2</a></li>
