--- a/dogs/chien-1.html
+++ b/dogs/chien-1.html
@@ -4,8 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chien 1</title>
+  <link rel="stylesheet" href="../src/css/styles.css">
 </head>
 <body>
-  <h1>Chien 1</h1>
+  <nav>
+    <a href="index.html">Retour aux chiens</a> | <a href="../index.html">Accueil</a>
+  </nav>
+  <main>
+    <h1>Chien 1</h1>
+    <img class="media media--fullwidth" src="../public/img/dogs/German_shepherd_(5781199120).jpg" alt="Berger allemand">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+  </main>
 </body>
 </html>
