--- a/dogs/index.html
+++ b/dogs/index.html
@@ -4,12 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dogs</title>
+  <link rel="stylesheet" href="../src/css/styles.css">
 </head>
 <body>
-  <h1>Dogs</h1>
-  <ul>
-    <li><a href="chien-1.html">Chien 1</a></li>
-    <li><a href="chien-2.html">Chien 2</a></li>
-  </ul>
+  <nav>
+    <a href="../index.html">Retour à l'accueil</a>
+  </nav>
+  <main>
+    <h1>Dogs</h1>
+    <img class="media media--fullwidth" src="../public/img/dogs/German_shepherd_(5781199120).jpg" alt="Berger allemand">
+    <ul>
+      <li><a href="chien-1.html">Chien 1</a></li>
+      <li><a href="chien-2.html">Chien 2</a></li>
+    </ul>
+  </main>
 </body>
 </html>
