Finalisation de l'ajout des images

--- a/cats/chat-2.html
+++ b/cats/chat-2.html
@@ -11,9 +11,9 @@
     <a href="index.html">Retour aux chats</a> | <a href="../index.html">Accueil</a>
   </nav>
   <main>
-    <h1>Chat 2</h1>
-    <img class="media media--fullwidth" src="../public/img/cats/Sleeping_cat_on_her_back.jpg" alt="Chat qui dort sur le dos">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <h1>Chaton de 6 semaines tacheté</h1>
+      <p>Tout mignon et tout bébé.</p>
+  <img class="media media--fullwidth" src="../public/img/cats/Six_weeks_old_cat_(aka).jpg" alt="Chatons Sphynx">    
   </main>
 </body>
 </html>
