--- a/cats/index.html
+++ b/cats/index.html
@@ -4,12 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cats</title>
+  <link rel="stylesheet" href="../src/css/styles.css">
 </head>
 <body>
-  <h1>Deux photos différentes de chats</h1>
-  <ul>
-    <li><a href="chat-1.html">Chat 1</a></li>
-    <li><a href="chat-2.html">Chat 2</a></li>
-  </ul>
+  <nav>
+    <a href="../index.html">Retour à l'accueil</a>
+  </nav>
+  <main>
+    <h1>Les chats 🐈</h1>
+    <ul>
+      <li><a href="chat-1.html">- Chat Sphynx sans poil</a></li>
+      <li><a href="chat-2.html">- Chaton de 6 semaines tacheté</a></li>
+    </ul>
+  </main>
 </body>
 </html>
