--- a/dogs/chien-1.html
+++ b/dogs/chien-1.html
@@ -11,9 +11,9 @@
     <a href="index.html">Retour aux chiens</a> | <a href="../index.html">Accueil</a>
   </nav>
   <main>
-    <h1>Chien 1</h1>
-    <img class="media media--fullwidth" src="../public/img/dogs/German_shepherd_(5781199120).jpg" alt="Berger allemand">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <h1>Kangal</h1>
+        <p>Le Kangal est une race de chien originaire de Turquie, il est très grand, et protège très bien le bétail.</p>
+    <img class="media media--fullwidth" src="../public/img/dogs/Kızıl's_dog_Beyaz–IMG_5539_01.jpg" alt="Kangal allongé au soleil">
   </main>
 </body>
 </html>
