--- a/dogs/chien-2.html
+++ b/dogs/chien-2.html
@@ -11,9 +11,9 @@
     <a href="index.html">Retour aux chiens</a> | <a href="../index.html">Accueil</a>
   </nav>
   <main>
-    <h1>Chien 2</h1>
-    <img class="media media--fullwidth" src="../public/img/dogs/German_shepherd_wanting_to_play.JPG" alt="Berger allemand qui veut jouer">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <h1>Husky sibérien</h1>
+        <p>Le husky sibérien est une race adaptée aux températures froides, il tire les traîneaux sur la neige.</p>
+    <img class="media media--fullwidth" src="../public/img/dogs/Sled_dog_on_Svalbard_with_heterochromia.jpg" alt="Chien de traîneau avec deux yeux de couleurs différentes">
   </main>
 </body>
 </html>
