--- a/dogs/index.html
+++ b/dogs/index.html
@@ -11,11 +11,10 @@
     <a href="../index.html">Retour à l'accueil</a>
   </nav>
   <main>
-    <h1>Dogs</h1>
-    <img class="media media--fullwidth" src="../public/img/dogs/German_shepherd_(5781199120).jpg" alt="Berger allemand">
+    <h1>Les chiens 🐕</h1>
     <ul>
-      <li><a href="chien-1.html">Chien 1</a></li>
-      <li><a href="chien-2.html">Chien 2</a></li>
+      <li><a href="chien-1.html">- Kangal</a></li>
+      <li><a href="chien-2.html">- Husky sibérien</a></li>
     </ul>
   </main>
 </body>
