--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
       <nav class="header__menu menu" id="mainNav" aria-hidden="true">
         <ul class="menu__list list-unstyled">
           <li class="menu__item">
-            <a class="menu__link" href="cats/index.html">Les chats</a>
+            <a class="menu__link" href="cats/index.html">Les chats 🐈</a>
             <ul>
-              <li><a href="cats/chat-1.html">chat 1</a></li>
-              <li><a href="cats/chat-2.html">chat 2</a></li>
+              <li><a href="cats/chat-1.html">Chat Sphynx sans poil</a></li>
+              <li><a href="cats/chat-2.html">Chaton de 6 semaines tacheté</a></li>
             </ul>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="dogs/index.html">Les chiens</a>
+            <a class="menu__link" href="dogs/index.html">Les chiens 🐕</a>
             <ul>
-              <li><a href="dogs/chien-1.html">chien 1</a></li>
-              <li><a href="dogs/chien-2.html">chien 2</a></li>
+              <li><a href="dogs/chien-1.html">Kangal</a></li>
+              <li><a href="dogs/chien-2.html">Husky sibérien</a></li>
             </ul>
           </li>
         </ul>
@@ -42,7 +42,10 @@
     <h1>Bienvenue sur la page des animaux ! </h1>
       <p>Vous retrouverez ici plusieurs photos de chats et de chiens.
     </p>
-    <img class="media media--fullwidth" src="/cats/Chat_européen_noir_et_blanc.jpg" alt="Chat qui baille">
+    <div class="image-container">
+      <img src="/cats/Chat_européen_noir_et_blanc.jpg" alt="Chat qui baille">
+      <img src="/dogs/Zazu_the_dog_on_Lion's_Head_mountain_34.jpg" alt="Chien dans la montagne Lion's Head">
+    </div>
   </main>
 </body>
 </html>
