Application d'un CSS

--- a/cats/index.html
+++ b/cats/index.html
@@ -42,8 +42,8 @@
   <main>
     <h1>Les chats 🐈</h1>
     <ul>
-      <li><a href="chat-1.html">- Chat Sphynx sans poil</a></li>
-      <li><a href="chat-2.html">- Chaton de 6 semaines tacheté</a></li>
+      <li><a href="chat-1.html">Chat Sphynx sans poil</a></li>
+      <li><a href="chat-2.html">Chaton de 6 semaines tacheté</a></li>
     </ul>
   </main>
 </body>
