--- a/dogs/index.html
+++ b/dogs/index.html
@@ -42,8 +42,8 @@
   <main>
     <h1>Les chiens 🐕</h1>
     <ul>
-      <li><a href="chien-1.html">- Kangal</a></li>
-      <li><a href="chien-2.html">- Husky sibérien</a></li>
+      <li><a href="chien-1.html">Kangal</a></li>
+      <li><a href="chien-2.html">Husky sibérien</a></li>
     </ul>
   </main>
 </body>
