--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <main>
     <h1>Bienvenue sur la page des animaux ! </h1>
-      <p>Vous retrouverez ici plusieurs photos de chats et de chiens.
+      <p>Cliquez sur le menu en haut à droite pour accéder à plusieurs photos de chats et de chiens.
     </p>
     <div class="image-container">
       <img src="/cats/Chat_européen_noir_et_blanc.jpg" alt="Chat qui baille">
